# web-yew

./: .gitignore  Cargo.toml  Makefile  README.md  index.js  package.json
src/: app.rs
static/: index.html  index.js
