[package]
name = "web-yew"
version = "0.1.0"
authors = ["Rayy Lee <rayylee@foxmail.com>"]
edition = "2018"
keywords = ["yew", "wasm", "wasm-bindgen", "web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2.69"
yew = "0.17.3"
